opam-version: "1.2"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/hannesm/logs-syslog"
doc: "https://hannesm.github.io/logs-syslog/doc"
dev-repo: "https://github.com/hannesm/logs-syslog.git"
bug-reports: "https://github.com/hannesm/logs-syslog/issues"
license: "ISC"
available: [ ocaml-version >= "4.03.0"]

depends: [
  "dune" {>= "1.1.0" & build}
  "logs"
  "ptime"
  "syslog-message" {>= "0.0.2"}
]

depopts: [
  "lwt"
  "x509" "tls" "cstruct"
  "mirage-kv-lwt"
  "mirage-console-lwt" "mirage-clock" "mirage-stack-lwt" "ipaddr"
]

conflicts: [
  "mirage-types-lwt" {< "3.0.0"}
  "x509" {< "0.6.0"}
  "tls" {< "0.8.0"}
]

build: [ "dune" "build" "-p" name "-j" jobs ]
