opam-version: "2.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: ["Hannes Mehnert <hannes@mehnert.org>"]
homepage: "https://github.com/hannesm/logs-syslog"
doc: "https://hannesm.github.io/logs-syslog/doc"
dev-repo: "git+https://github.com/hannesm/logs-syslog.git"
bug-reports: "https://github.com/hannesm/logs-syslog/issues"
license: "ISC"

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "1.1.0"}
  "logs" {>= "0.5.0"}
  "ptime"
  "syslog-message" {>= "1.0.0"}
]

depopts: [
  "lwt"
  "x509" "tls-lwt" "tls-mirage" "cstruct"
  "mirage-kv"
  "mirage-clock" "ipaddr" "tcpip"
]

conflicts: [
  "mirage-kv" {< "3.0.0"}
  "mirage-clock" {< "3.0.0"}
  "tcpip" {< "7.0.0"}
  "tls-lwt" {< "1.0.0"}
  "tls-mirage" {< "1.0.0"}
]

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]

synopsis: "Logs reporter to syslog (UDP/TCP/TLS)"
description: """
This library provides log reporters using syslog over various transports (UDP,
TCP, TLS) with various effectful layers: Unix, Lwt, MirageOS.  It integrates the
[Logs](http://erratique.ch/software/logs) library, which provides logging
infrastructure for OCaml, with the
[syslog-message](http://verbosemo.de/syslog-message/) library, which provides
encoding and decoding of syslog messages ([RFC
3164](https://tools.ietf.org/html/rfc3164)).
"""
