(env
  (_ (flags -w +A-4-44 -safe-string -principal)))

(library
  (name        logs_syslog)
  (public_name logs-syslog)
  (synopsis    "Emit logs via syslog")
  (libraries   logs syslog-message ptime)
  (modules     logs_syslog))

(library
  (name        logs_syslog_unix)
  (public_name logs-syslog.unix)
  (synopsis    "Unix syslog reporter")
  (libraries   logs-syslog ptime.clock.os unix)
  (modules     logs_syslog_unix))

(library
  (name        logs_syslog_lwt_common)
  (public_name logs-syslog.lwt.common)
  (libraries   logs-syslog lwt)
  (optional)
  (modules     logs_syslog_lwt_common))

(library
  (name        logs_syslog_lwt)
  (public_name logs-syslog.lwt)
  (synopsis    "Lwt syslog reporter")
  (libraries   logs-syslog logs-syslog.lwt.common ptime.clock.os lwt lwt.unix)
  (optional)
  (modules     logs_syslog_lwt))

(library
  (name        logs_syslog_lwt_tls)
  (public_name logs-syslog.lwt.tls)
  (synopsis    "Lwt TLS syslog reporter")
  (libraries   logs-syslog.lwt x509 tls tls.lwt cstruct)
  (optional)
  (modules     logs_syslog_lwt_tls))

(library
  (name        logs_syslog_mirage)
  (public_name logs-syslog.mirage)
  (synopsis    "Mirage syslog reporter")
  (libraries   logs-syslog.lwt.common ipaddr lwt mirage-console-lwt mirage-clock mirage-stack-lwt cstruct)
  (optional)
  (modules     logs_syslog_mirage))

(library
  (name        logs_syslog_mirage_tls)
  (public_name logs-syslog.mirage.tls)
  (synopsis    "Mirage TLS syslog reporter")
  (libraries   logs-syslog.mirage x509 tls tls.mirage mirage-kv-lwt)
  (optional)
  (modules     logs_syslog_mirage_tls))
